<b>Changes:</b><br>
1) Fix configs scripts for support bash >=4 and change product name<br>
2) Kernel version up to 2.6.21.7<br>
3) Redesign filesystem. Busybox up to 1.15.3<br>
4) PPPD up to 2.4.5 with more patches as acell-ptpp/l2tp/gigaworld/allow-mppe/etc<br>
5) Add ACELL-PPTP Kernel support<br>
6) Mount ramfs particions in kernel mode<br>
7) BGIDGE: Pause frames shouldn't be passed up by driver anyway<br>
8) Add ESFQ support<br>
9) Initial auto detect memory size (fix me 32bit mode support)<br>
10) Add udpxy<br>
11) Code cleanup<br>
12) Remove ASUS Code<br>
13) Original Ralink gui now work<br>
14) pptp/l2tp/pppoe tun now works<br>
15) Full rc scrips is write in rwfs<br>
16) RT3052F embed switch full work now<br>
17) Rewrite pptp/l2tp/pppoe scripts to support buggy nas (corbina etc)<br>
18) miniupnpd now work too<br>
19) Add rwfs support (fs save | fs restore | fs load)<br>
20) Auto set mss size<br>
21) Masqrade now work correctly<br>
22) IMQ support added<br>
23) Initial shaper scripts (default priomap and esfq for decrase torrents prio)<br>
24) Kernel ip account support added<br>
25) Fix crash on sta list<br>
26) Update userspace daemons and utility<br>
27) Some busybox fixes<br>

<br>
<b>ToDo:</b><br>
1) Job control fix<br>

<br><br>
<b>For support see:</b><br>
<a href="http://acorp.ru">acorp.ru - Acorp Electronics Inc.</a><br>
<a href="http://ddixlab.ru">ddixlab.ru - Laboratory of built in systems.
</a><br>
<br><br>
<b>News and changes in Russian:</b><br>
<a href="http://sadnet.ru">sadnet.ru - Development opensource routers firmware</a><br>
<br><br>
<b>Bug report please sfstudio[at]mail.ru</b>
<br>