@@ -178,8 +178,8 @@ CONFIG_FALSE=y
 # CONFIG_FSYNC is not set
 CONFIG_HEAD=y
 CONFIG_FEATURE_FANCY_HEAD=y
-# CONFIG_HOSTID is not set
-# CONFIG_ID is not set
+CONFIG_HOSTID=y
+CONFIG_ID=y
 # CONFIG_INSTALL is not set
 # CONFIG_FEATURE_INSTALL_LONG_OPTIONS is not set
 CONFIG_LENGTH=y
