@@ -9,7 +9,5 @@ system_uptime=yes
 notify_interval=60
 clean_ruleset_threshold=10
 clean_ruleset_interval=600
-uuid=fc4ec57e-b051-11db-88f8-0060085db3f6
-serial=12345678
-model_number=1
 allow 0-65535 0.0.0.0/0 0-65535
+model_number=1
