@@ -6,12 +6,15 @@
 start() {
 if [ -f /bin/miniupnpd ]; then
  echo "Start upnp "
+ gen_uuid
  get_param
     if [ "$opmode" = "0" -o "$opmode" = "1" ]; then
-        if [ "$upnp" = "1" ]; then
-	    EXTIP="`LC_ALL=C /sbin/ifconfig $wan_upnp_if | grep 'inet addr' | awk '{print $2}' | sed -e 's/.*://'`"
+	EXTIP="`LC_ALL=C /sbin/ifconfig $wan_upnp_if | grep 'inet addr' | awk '{print $2}' | sed -e 's/.*://'`"
+        if [ "$upnp" = "1" ] && [ "$EXTIP" != "" ]; then
 	    echo "External IP = $EXTIP"
             route add -net 239.0.0.0 netmask 255.0.0.0 dev $lan_if
+	    cat /etc/miniupnpd.conf.template > /etc/miniupnpd.conf 
+	    cat /etc/miniupnpd.conf.uuid >> /etc/miniupnpd.conf 
             miniupnpd -f /etc/miniupnpd.conf -i $wan_upnp_if -o $EXTIP -a $ip &
 	fi
     fi
@@ -37,6 +40,27 @@ get_param() {
 	    wan_upnp_if=$wan_if
         fi
     fi
+}
+gen_uuid() {
+if [ -f /etc/miniupnpd.conf.uuid ]; then
+ echo "Use old UUID file"
+else
+   echo "Generate UUID for miniupnpd"
+   num=0
+    for i in `seq 1 36`; do
+        id=`cat /dev/urandom | hexdump | head -1 | cut -c9`
+        num=`expr $num + 1`
+        if [ $num = "9" ] || [ $num = "19" ] || [ $num = "24" ]; then
+            id="-"
+        fi
+        outid=$outid$id
+    done
+    echo "UPNP UUID is $outid"
+    echo "uuid=""$outid" >> /etc/miniupnpd.conf.uuid
+    serial=`hostid`
+    echo "serial=""$serial" >> /etc/miniupnpd.conf.uuid
+    fs save
+fi
 }
 
 case "$1" in
