@@ -1,7 +1,7 @@
 /* MiniUPnP Project
  * http://miniupnp.free.fr/ or http://miniupnp.tuxfamily.org/
  * (c) 2006-2009 Thomas Bernard
- * generated by ./genconfig.sh on Вск Янв 24 09:55:19 OMST 2010 */
+ * generated by ./genconfig.sh on */
 #ifndef __CONFIG_H__
 #define __CONFIG_H__
 
