@@ -33,7 +33,7 @@ ${RM} ${CONFIGFILE}
 echo "/* MiniUPnP Project" >> ${CONFIGFILE}
 echo " * http://miniupnp.free.fr/ or http://miniupnp.tuxfamily.org/" >> ${CONFIGFILE}
 echo " * (c) 2006-2009 Thomas Bernard" >> ${CONFIGFILE}
-echo " * generated by $0 on `date` */" >> ${CONFIGFILE}
+echo " * generated by $0 on */" >> ${CONFIGFILE}
 echo "#ifndef $CONFIGMACRO" >> ${CONFIGFILE}
 echo "#define $CONFIGMACRO" >> ${CONFIGFILE}
 echo "" >> ${CONFIGFILE}
