@@ -80,7 +80,7 @@ clean_ruleset_interval=600
 #quickrules=no
 
 # uuid : generate your own with "make genuuid"
-uuid=5b15a62c-3ac1-41bf-a4c6-21064f71cf6d
+uuid=d7b4cdb5-d0b5-4c4a-b158-6ef23ae5c716
 
 # serial and model number the daemon will report to clients
 # in its XML description
